WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270991
Fix crash when `Device::generateAnOutOfMemoryError` is repeatedly invoked
https://bugs.webkit.org/show_bug.cgi?id=270991
Summary
Fix crash when `Device::generateAnOutOfMemoryError` is repeatedly invoked
Charlie Wolfe
Reported
2024-03-14 11:14:36 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Charlie Wolfe
Comment 1
2024-03-14 11:14:48 PDT
rdar://124475321
Charlie Wolfe
Comment 2
2024-03-14 11:21:25 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/25893
EWS
Comment 3
2024-03-14 20:56:08 PDT
Committed
276135@main
(56e388b8f654): <
https://commits.webkit.org/276135@main
> Reviewed commits have been landed. Closing PR #25893 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug