Fix crash when `Device::generateAnOutOfMemoryError` is repeatedly invoked https://bugs.webkit.org/show_bug.cgi?id=270991 rdar://124475321

Reviewed by Mike Wyrzykowski.

`m_uncapturedErrorCallback` can only be called once, so it should always be cleared after calling it.

* LayoutTests/fast/webgpu/repeated-out-of-memory-error-expected.txt: Added.
* LayoutTests/fast/webgpu/repeated-out-of-memory-error.html: Added.
* Source/WebGPU/WebGPU/Device.mm:
(WebGPU::Device::generateAnOutOfMemoryError):
(WebGPU::Device::generateAnInternalError):

Canonical link: https://commits.webkit.org/276135@main